<resources>
    <string name="app_name">Life Points Counter</string>

    <string name="press_back_again">Please, press BACK again to exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Life Points Counter</string>
    <string name="nav_header_subtitle">cristichi@hotmail.es</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_section_utilities">Utilities</string>
    <string name="menu_coin">Coin/Dices</string>
    <string name="menu_section_preferences">Preferences</string>
    <string name="menu_edit_buttons">Edit Buttons</string>
    <string name="menu_settings">Settings</string>

    <string name="main_start_lp_label">Initial LPs</string>
    <string name="main_start_lp_default">8000</string>
    <string name="main_player1_label">Player 1\'s Name</string>
    <string name="main_player1_default">Player 1</string>
    <string name="main_player2_label">Player 2\'s Name</string>
    <string name="main_player2_default">Player 2</string>
    <string name="main_error_LP">LPs are too high!</string>

    <string name="counter_player1_default">Player 1</string>
    <string name="counter_player2_default">Player 2</string>

    <string name="settings_title">Settings</string>
    <string name="settings_lp">Default Starting LPs</string>
    <string name="settings_player1">Default Player 1\'s Name</string>
    <string name="settings_player2">Default Player 2\'s Name</string>
    <string name="settings_music">Music</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_not_saved">An error occurred trying to save settings</string>
    <string name="settings_not_loaded">An error occurred trying to load your settings</string>

    <string name="buttons_title">Button Sets</string>
    <string name="buttons_add_row">New Row</string>
    <string name="buttons_dialog_add_value">Add Button</string>
    <string name="buttons_saved">Settings saved</string>
    <string name="buttons_not_saved">An error ocurred trying to save changes</string>
</resources>
